#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([PipeWalker], [0.5.1], [artemsen@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror])
AC_CONFIG_SRCDIR([src/cell.cpp])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([SDL], [SDL_Init], [], AC_MSG_ERROR([libSDL not found]))
AC_CHECK_LIB([GL], [glBegin], [], AC_MSG_ERROR([libGL not found]))
AC_CHECK_LIB([GLU], [gluPerspective], [], AC_MSG_ERROR([libGLU not found]))

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h sys/time.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_HEADER_TIME

# Checks for library functions.
AC_CHECK_FUNCS([gettimeofday])

AC_CONFIG_FILES([Makefile
		src/Makefile
		extra/Makefile
		data/Makefile
		data/textures/Makefile])
AC_OUTPUT
