pkgdesktopdatadir = $(datadir)/applications
pkgdesktopdata_DATA = pipewalker.desktop

pkgpixmapdatadir = $(datadir)/pixmaps
pkgpixmapdata_DATA = pipewalker.xpm

pkgmenudatadir = $(datadir)/menu
pkgmenudata_DATA = pipewalker

EXTRA_DIST = \
	$(pkgdesktopdata_DATA) \
	$(pkgpixmapdata_DATA) \
	$(pkgmenudata_DATA) \
	pipewalker.ico
