pkgtexturedatadir = $(datadir)/games/$(PACKAGE)/textures
pkgtexturedata_DATA = \
    btn_base.tga \
    btn_cancel.tga \
    btn_custom.tga \
    btn_info.tga \
    btn_new.tga \
    btn_ok.tga \
    btn_radio.tga \
    btn_reset.tga \
    cell_bkgr.tga \
    cell_lock.tga \
    env_bkgr.tga \
    env_title.tga \
    hexnum.tga \
    mapid.tga \
    rcv_dsp_act.tga \
    rcv_dsp_psv.tga \
    rcv_static.tga \
    sender.tga \
    tube_act.tga \
    tube_psv.tga \
    wnd_custom.tga \
    wnd_info.tga

EXTRA_DIST = $(pkgtexturedata_DATA) \
    wnd_custom.xcf \
    wnd_info.xcf
