pkgtexturedatadir = $(datadir)/games/$(PACKAGE)/textures
pkgtexturedata_DATA = \
	btn_sett.tga \
	btn_next.tga \
	btn_ok.tga \
	btn_cancel.tga \
	btn_prev.tga \
	btn_reset.tga \
	btn_radon.tga \
	btn_radoff.tga \
	cell_bkg.tga \
	cell_lock.tga \
	cell_pc_a.tga \
	cell_pc_p.tga \
	cell_ph_a.tga \
	cell_ph_p.tga \
	cell_pj_a.tga \
	cell_pj_p.tga \
	cell_ps_a.tga \
	cell_ps_p.tga \
	cell_rcv_a.tga \
	cell_rcv_p.tga \
	cell_sender.tga \
	env_bkgr.tga \
	env_sett.tga \
	env_title.tga \
	expl_part.tga \
	num_0.tga \
	num_1.tga \
	num_2.tga \
	num_3.tga \
	num_4.tga \
	num_5.tga \
	num_6.tga \
	num_7.tga \
	num_8.tga \
	num_9.tga

EXTRA_DIST = \
	$(pkgtexturedata_DATA) \
	env_sett.xcf
